[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/GUIComponents/InputButtons/InputsButtons.gd" type="Script" id=1]
[ext_resource path="res://Game/Assets/Images/Mask-8bits-LightOff.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.980392, 0.839216, 0.423529 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="InputButtons" type="CanvasLayer"]
layer = 127
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
texture = ExtResource( 2 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkRightBtn" type="Button" parent="."]
light_mask = 0
anchor_left = 0.753
anchor_top = 0.402
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = 118.08
margin_top = 7.72
margin_right = 87.0
margin_bottom = 39.0
rect_min_size = Vector2( 48, 32 )
rect_rotation = 90.0
rect_pivot_offset = Vector2( 24, 16 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkDownBtn" type="Button" parent="."]
light_mask = 0
anchor_left = 0.4
anchor_top = 0.762
anchor_right = 0.6
anchor_bottom = 1.0
margin_top = 0.319977
rect_min_size = Vector2( 48, 32 )
rect_pivot_offset = Vector2( 24, 16 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkLeftBtn" type="Button" parent="."]
light_mask = 0
anchor_top = 0.402
anchor_right = 0.253
anchor_bottom = 0.603
margin_left = -8.0
margin_top = 86.72
margin_right = -40.92
margin_bottom = 120.08
rect_min_size = Vector2( 48, 32 )
rect_rotation = -90.0
rect_pivot_offset = Vector2( 24, 16 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkUpBtn" type="Button" parent="."]
light_mask = 0
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 0.262
margin_bottom = 0.319977
rect_min_size = Vector2( 48, 32 )
rect_pivot_offset = Vector2( 24, 16 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="CheckButton" parent="."]
anchor_left = 0.812
anchor_top = 0.854
anchor_right = 0.941
anchor_bottom = 0.904
margin_left = -7.67999
margin_top = -2.56
margin_right = 13.76
margin_bottom = 5.43994
rect_min_size = Vector2( 72, 28 )
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 36, 14 )
custom_colors/font_color_hover_pressed = Color( 0.568627, 0.72549, 0, 1 )
custom_colors/font_color = Color( 0.72549, 0.72549, 0.72549, 1 )
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 1, 0, 1 )
shortcut_in_tooltip = false
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Run" to="." method="run_toggled"]
